--- a/src/main/resources/templates/changepw.html
+++ b/src/main/resources/templates/changepw.html
@@ -21,7 +21,7 @@
             <div>
 				<form th:action="@{/changepw}" th:method="post">
 					<div>
-						현재 비밀번호<input type="text" class="form-control form-group" id="oldpw" name="oldpw">
+						현재 비밀번호<input type="password" class="form-control form-group" id="oldpw" name="oldpw">
 					</div>
 					<div>
 						새 비밀번호<input type="password" class="form-control form-group" id="pw" name="pw">
